--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,19 +28,19 @@ jobs:
     - name: Publish linux64
       run: dotnet publish --self-contained true -r linux-x64 -p:PublishSingleFile=true -c Release
     - name: Give a diferent name to linux elf executable
-      run: mv ConsoleApp1/bin/Release/net6.0/linux-x64/publish/ConsoleApp1 ConsoleApp1/bin/Release/net6.0/linux-x64/publish/ConsoleApp1.elf
+      run: mv EasySaveConsole/bin/Release/net6.0/linux-x64/publish/EasySaveConsole EasySaveConsole/bin/Release/net6.0/linux-x64/publish/EasySaveConsole.elf
     - name: Publish win64
       run: dotnet publish --self-contained true -r win-x64 -p:PublishSingleFile=true -c Release
     - name: Upload a Build Artifact linux
       uses: actions/upload-artifact@v2.3.1
       with:
         name: hello-world_linux-x64
-        path: ConsoleApp1/bin/Release/net6.0/linux-x64/publish/
+        path: EasySaveConsole/bin/Release/net6.0/linux-x64/publish/
     - name: Upload a Build Artifact windows
       uses: actions/upload-artifact@v2.3.1
       with:
         name: hello-world_win-x64
-        path: ConsoleApp1/bin/Release/net6.0/win-x64/publish/
+        path: EasySaveConsole/bin/Release/net6.0/win-x64/publish/
           
   release:
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
@@ -77,7 +77,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ConsoleApp1.elf
+          asset_path: EasySaveConsole.elf
           asset_name: hello-wolrd_linux-x64
           asset_content_type: application/octet-stream
       - name: Upload Release Asset Windows 
@@ -87,6 +87,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ConsoleApp1.exe
+          asset_path: EasySaveConsole.exe
           asset_name: hello-world_win-x64.exe
           asset_content_type: application/octet-stream
