--- a/EasySaveGUI/EasySaveGUI.csproj
+++ b/EasySaveGUI/EasySaveGUI.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <Nullable>enable</Nullable>
 	<!--Avalonia doesen't support TrimMode=link currently,but we are working on that https://github.com/AvaloniaUI/Avalonia/issues/6892 -->
 	<TrimMode>copyused</TrimMode>
@@ -24,4 +24,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.12" />
 	<PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EasySaveConsole\EasySaveConsole.csproj" />
+  </ItemGroup>
 </Project>
