--- a/CryptoFile/CryptoFile.csproj
+++ b/CryptoFile/CryptoFile.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>CryptoSoft</AssemblyName>
+    <RootNamespace>CryptoSoft</RootNamespace>
   </PropertyGroup>
 
 </Project>
