--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,22 +25,26 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      
     - name: Publish linux64
-      run: dotnet publish --self-contained true -r linux-x64 -p:PublishSingleFile=true -c Release
+      run: dotnet publish EasySaveGUI/EasySaveGUI.csproj -c Release -r linux-x64 -p:PublishSingleFile=true
     - name: Give a diferent name to linux elf executable
-      run: mv EasySaveConsole/bin/Release/netcoreapp3.1/linux-x64/publish/EasySaveConsole EasySaveConsole/bin/Release/netcoreapp3.1/linux-x64/publish/EasySaveConsole.elf
+      run: mv EasySaveGUI/bin/Release/netcoreapp3.1/linux-x64/publish/EasySaveGUI EasySaveGUI/bin/Release/netcoreapp3.1/linux-x64/publish/EasySaveGUI.elf
+      
     - name: Publish win64
-      run: dotnet publish --self-contained true -r win-x64 -p:PublishSingleFile=true -c Release
+      run: dotnet publish EasySaveGUI/EasySaveGUI.csproj -c Release -r win-x64 -p:PublishSingleFile=true    
+    
     - name: Upload a Build Artifact linux
       uses: actions/upload-artifact@v2.3.1
       with:
-        name: hello-world_linux-x64
-        path: EasySaveConsole/bin/Release/netcoreapp3.1/linux-x64/publish/
+        name: EasySaveGui_linux-x64
+        path: EasySaveGUI/bin/Release/netcoreapp3.1/linux-x64/publish/
     - name: Upload a Build Artifact windows
       uses: actions/upload-artifact@v2.3.1
       with:
-        name: hello-world_win-x64
-        path: EasySaveConsole/bin/Release/netcoreapp3.1/win-x64/publish/
+        name: EasySaveGui_win-x64
+        path: EasySaveGUI/bin/Release/netcoreapp3.1/win-x64/publish/
+          
           
   release:
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
@@ -65,11 +69,11 @@ jobs:
       - name: Get artifact linux
         uses: actions/download-artifact@v2
         with:
-          name: hello-world_linux-x64
+          name: EasySaveGui_linux-x64
       - name: Get artifact win
         uses: actions/download-artifact@v2
         with:
-          name: hello-world_win-x64
+          name: EasySaveGui_win-x64
       - name: Upload Release Asset linux
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -88,5 +92,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: EasySaveConsole.exe
-          asset_name: hello-world_win-x64.exe
+          asset_name: EasySaveGui_win-x64.exe
           asset_content_type: application/octet-stream
