--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,12 +41,41 @@ jobs:
       with:
         name: hello-world_win-x64
         path: EasySaveConsole/bin/Release/netcoreapp3.1/win-x64/publish/
+        
+  cryptosoft-publication:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.x
+    - name: Restore dependencies
+      run: dotnet restore CryptoFile/CryptoFile.csproj
+    - name: Build
+      run: dotnet build --no-restore CryptoFile/CryptoFile.csproj
+    - name: Publish crytosoft linux64
+      run: dotnet publish CryptoFile/CryptoFile.csproj --self-contained true -r linux-x64 -p:PublishSingleFile=true -c Release
+    - name: Publish crytosoft win64
+      run: dotnet publish CryptoFile/CryptoFile.csproj --self-contained true -r win-x64 -p:PublishSingleFile=true -c Release
+    - name: Upload a Build Artifact linux
+      uses: actions/upload-artifact@v2.3.1
+      with:
+        name: CryptoSoft_linux-x64
+        path: CryptoFile/bin/Release/netcoreapp3.1/linux-x64/publish/
+    - name: Upload a Build Artifact windows
+      uses: actions/upload-artifact@v2.3.1
+      with:
+        name: CryptoSoft_win-x64
+        path: CryptoFile/bin/Release/netcoreapp3.1/win-x64/publish/
           
   release:
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     needs: 
       - build-and-publish
+      - cryptosoft-publication
         
     steps:
       - name: checkout
@@ -89,4 +118,34 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: EasySaveConsole.exe
           asset_name: hello-world_win-x64.exe
+          asset_content_type: application/octet-stream
+
+      # Upload Cryptosoft artifacts
+      - name: Get Cryptosoft artifact linux
+        uses: actions/download-artifact@v2
+        with:
+          name: CryptoSoft_linux-x64
+      - name: Get Cryptosoft artifact win
+        uses: actions/download-artifact@v2
+        with:
+          name: CryptoSoft_win-x64
+      - name: Upload Release Asset linux
+        id: upload-release-asset-cryptosoft-linux
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: CryptoSoft
+          asset_name: CryptoSoft_linux-x64
+          asset_content_type: application/octet-stream
+      - name: Upload Release Asset Windows
+        id: upload-release-asset-cryptosoft-win
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: CryptoSoft.exe
+          asset_name: CryptoSoft_win-x64.exe
           asset_content_type: application/octet-stream
