--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,11 +2,9 @@ name: Publish and release
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, github-actions ]
     tags:
       - v*
-#  pull_request:
-#    branches: [ master ]
 
 jobs:
   build-and-publish:
@@ -27,23 +25,23 @@ jobs:
       run: dotnet test --no-build --verbosity normal
       
     - name: Publish linux64
-      run: dotnet publish EasySaveGUI/EasySaveGUI.csproj -c Release -r linux-x64 -p:PublishSingleFile=true
+      run: dotnet publish EasySaveUI/EasySaveUI.csproj -c Release -r linux-x64 -p:PublishSingleFile=true
     - name: Give a diferent name to linux elf executable
-      run: mv EasySaveGUI/bin/Release/netcoreapp3.1/linux-x64/publish/EasySaveGUI EasySaveGUI/bin/Release/netcoreapp3.1/linux-x64/publish/EasySaveGUI.elf
+      run: mv EasySaveUI/bin/Release/netcoreapp3.1/linux-x64/publish/EasySaveUI EasySaveUI/bin/Release/netcoreapp3.1/linux-x64/publish/EasySaveUI.elf
       
     - name: Publish win64
-      run: dotnet publish EasySaveGUI/EasySaveGUI.csproj -c Release -r win-x64 -p:PublishSingleFile=true    
+      run: dotnet publish EasySaveUI/EasySaveUI.csproj -c Release -r win-x64 -p:PublishSingleFile=true    
     
     - name: Upload a Build Artifact linux
       uses: actions/upload-artifact@v2.3.1
       with:
-        name: EasySaveGui_linux-x64
-        path: EasySaveGUI/bin/Release/netcoreapp3.1/linux-x64/publish/
+        name: EasySaveUi_linux-x64
+        path: EasySaveUI/bin/Release/netcoreapp3.1/linux-x64/publish/
     - name: Upload a Build Artifact windows
       uses: actions/upload-artifact@v2.3.1
       with:
-        name: EasySaveGui_win-x64
-        path: EasySaveGUI/bin/Release/netcoreapp3.1/win-x64/publish/
+        name: EasySaveUi_win-x64
+        path: EasySaveUI/bin/Release/netcoreapp3.1/win-x64/publish/
           
           
   release:
@@ -69,11 +67,11 @@ jobs:
       - name: Get artifact linux
         uses: actions/download-artifact@v2
         with:
-          name: EasySaveGui_linux-x64
+          name: EasySaveUi_linux-x64
       - name: Get artifact win
         uses: actions/download-artifact@v2
         with:
-          name: EasySaveGui_win-x64
+          name: EasySaveUi_win-x64
       - name: Upload Release Asset linux
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -92,5 +90,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: EasySaveConsole.exe
-          asset_name: EasySaveGui_win-x64.exe
+          asset_name: EasySaveUi_win-x64.exe
           asset_content_type: application/octet-stream
