--- a/EasySaveUI/EasySaveUI.csproj
+++ b/EasySaveUI/EasySaveUI.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\EasySaveConsole\EasySaveConsole.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Models" />
     <Folder Include="Models\" />
   </ItemGroup>
 </Project>
