--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,7 @@ jobs:
         dotnet-version: 3.1.x
     - name: Restore dependencies
       run: dotnet restore
+    - run: mkdir bin/Debug/netcoreapp3.1/FR/
     - name: Build
       run: dotnet build --no-restore
     - name: Test
