--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,10 +19,10 @@ jobs:
         dotnet-version: 3.1.x
     - name: Restore dependencies
       run: dotnet restore
-    - run: mkdir -p bin/Debug/netcoreapp3.1/FR/
     - name: Build
       run: dotnet build --no-restore
-#    - run: dotnet build --no-restore
+    - run: dotnet build --no-restore
+      if: failure()
     - name: Test
       run: dotnet test --no-build --verbosity normal
       
