--- a/EasySaveConsole/EasySaveConsole.csproj
+++ b/EasySaveConsole/EasySaveConsole.csproj
@@ -26,7 +26,7 @@
       <Compile Update="Properties\Resources.FR.Designer.cs">
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
-        <DependentUpon>Resources.FR.resx</DependentUpon>
+        <DependentUpon>Resources.fr.resx</DependentUpon>
       </Compile>
       <Compile Update="Properties\Resources.EN.Designer.cs">
         <DesignTime>True</DesignTime>
@@ -36,12 +36,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <EmbeddedResource Update="Properties\Resources.FR.resx">
+      <EmbeddedResource Update="Properties\Resources.fr.resx">
         <Generator>ResXFileCodeGenerator</Generator>
         <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
       </EmbeddedResource>
-      <EmbeddedResource Update="Properties\Resources.FR.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
+      <EmbeddedResource Update="Properties\Resources.fr.resx">
+        <Generator>PublicResXFileCodeGenerator</Generator>
         <LastGenOutput>Resources.FR.Designer.cs</LastGenOutput>
       </EmbeddedResource>
       <EmbeddedResource Update="Properties\Resources.EN.resx">
@@ -49,7 +49,7 @@
         <LastGenOutput>Resources.EN.Designer.cs</LastGenOutput>
       </EmbeddedResource>
       <EmbeddedResource Update="Properties\Resources.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
+        <Generator>PublicResXFileCodeGenerator</Generator>
         <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       </EmbeddedResource>
     </ItemGroup>
